# lz-decompress

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md  build.rs
examples/: decompress.rs
src/: lib.rs
tests/: decompress.rs
tests/data/: mini.txt.lz
wrapper/: fixup.h  lzlib_wrapper.c  lzlib_wrapper.h
