[package]
name = "lz-decompress"
version = "0.1.0"
edition = "2021"
authors = ["oliver.mueller@gmail.com"]
description = "Rust bindings to lzlib for decompressing .lz files"
repository = "https://github.com/marcmo/lz-decompress"
readme = "README.md"
license = "BSD-2-Clause"
keywords = ["lz", "compression", "ffi", "decompress"]
categories = ["compression", "external-ffi-bindings"]
exclude = ["/lzlib-1.15.tar.gz", "/tests/data"]

[build-dependencies]
cc = "1.0"

[dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3.19"
