[package]
name = "lz-decompress"
version = "0.2.0"
edition = "2021"
authors = ["oliver.mueller@gmail.com"]
description = "Rust bindings to lzlib for decompressing .lz files"
repository = "https://github.com/marcmo/lz-decompress"
readme = "README.md"
license = "BSD-2-Clause"
keywords = ["lz", "compression", "ffi", "decompress"]
categories = ["compression", "external-ffi-bindings"]
exclude = ["/tests/data"]
documentation = "https://docs.rs/lz-decompress/latest/lz_decompress/"
homepage = "https://github.com/marcmo/lz-decompress"

[build-dependencies]
cc = "1.0"

[dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3.19"
